[package]
name = "check_selector"
version = "0.1.0"
edition = "2024"

[dependencies]
scraper = "0.19.0"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4"
tokio = { version = "1", features = ["full"] }