[package]
name = "check_selector"
version = "0.1.0"
edition = "2021"

[dependencies]
scraper = "0.19.0"
reqwest = { version = "0.12.5", features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
actix-web = { version = "4", features = ["macros"] }
actix-files = "0.6"
futures = "0.3"